# tpms_solver

./: .gitignore  CMakeLists.txt  GITHUB_UPLOAD.md  LICENSE.md  PREPOMAX_REFERENCE_PLAN.md  README.md  SALOME_REFERENCE_PLAN.md  build.sh  install_deps.sh
src/: main.cpp
src/fem/: fem_core.cpp  fem_core.hpp
src/geometry/: field_texture.hpp  geometry_engine.cpp  geometry_engine.hpp  meshing_engine.cpp  meshing_engine.hpp  tpms_field.hpp
src/io/: file_dialog.hpp  geometry_io.cpp  geometry_io.hpp  project_io.cpp  project_io.hpp  report_io.cpp  report_io.hpp
src/preprocess/: preprocess_engine.cpp  preprocess_engine.hpp
src/preview/: preview_renderer.cpp  preview_renderer.hpp  vtk_viewport.cpp  vtk_viewport.hpp
src/solve/: ccx_solver.cpp  ccx_solver.hpp  linear_solver.cpp  linear_solver.hpp
src/state/: project_state.hpp
src/ui/: console_panel.hpp  layout.hpp  menu_bar.hpp  props_panel.hpp  ribbon.hpp  status_bar.hpp  theme.hpp  tree_panel.hpp  viewport_panel.cpp  viewport_panel.hpp  workflow_bar.hpp
src/validation/: validation_core.cpp  validation_core.hpp
tools/: pyvista_viewer.py
